add profile page
here i do   add profile page   , add folder  that contain  images

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +7,6 @@
   <link rel="stylesheet" href="./css/style.css">
   <title>social_book</title>
 </head>
-
 <body>
   <nav>
     <div class="nav_left">
@@ -34,7 +32,6 @@
 <div id="dark_botton" >
     <span></span>
 </div>
-
 
       <div class="setting_menu_inner">
         <div class="user_profile">
@@ -131,7 +128,6 @@
           <img src="./imges/member1.png" alt="">
           <p>Abdusa</p>
         </div>
-
       </div>
       <div class="write_post_container">
         <div class="user_profile">
@@ -156,6 +152,7 @@
           </div>
         </div>
       </div>
+
       <div class="post_container">
         <div class="post_row">
           <div class="user_profile">
@@ -194,6 +191,34 @@
           </div>
           <a href="#"><img src="./imges/3dot.png" alt=""></a>
         </div>
+        <p class="post_text">Subscribe <span>@Easy Tutorial</span> Youtube channel to watch more video on
+          website development and ui design <a href="#">#easiy tutorial</a>
+          <a href="#">youtube channal</a>
+        </p>
+        <img src="./imges/feed.png" class="post_image">
+        <div class="post_row">
+          <div class="activety_icon">
+            <div> <img src="./imges/like.png" alt="">45k</div>
+            <div> <img src="./imges/comment.png" alt="">23k</div>
+            <div> <img src="./imges/share.png" alt="">12k</div>
+          </div>
+          <div class="post_profile_icon">
+            <img src="imges/profile_picture.png" alt=""> <i class="fas fa_create_down"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="post_container">
+        <div class="post_row">
+          <div class="user_profile">
+            <img src="./imges/profile_picture.png">
+            <div>
+              <p>Abushe</p>
+              <span>june 24 2024 13:45 pm</span>
+            </div>
+          </div>
+          <a href="#"><img src="./imges/3dot.png" alt=""></a>
+        </div>
         <p class="post_text">like and share this video whi frainds <span>@Easy Tutorial</span> facebook page on your
           post
           ask your doubt in the commennt <a href="#">#easiy tutorial</a>
@@ -211,6 +236,7 @@
           </div>
         </div>
       </div>
+
       <div class="post_container">
         <div class="post_row">
           <div class="user_profile">
@@ -239,6 +265,235 @@
           </div>
         </div>
       </div>
+
+      <div class="post_container">
+        <div class="post_row">
+          <div class="user_profile">
+            <img src="./imges/profile_picture.png">
+            <div>
+              <p>Abushe</p>
+              <span>june 24 2024 13:45 pm</span>
+            </div>
+          </div>
+          <a href="#"><img src="./imges/3dot.png" alt=""></a>
+        </div>
+        <p class="post_text">like and share this video whi frainds <span>@Easy Tutorial</span> facebook page on your
+          post
+          ask your doubt in the commennt <a href="#">#easiy tutorial</a>
+          <a href="#">youtube channal</a>
+        </p>
+        <img src="./imges/feed1.png" class="post_image">
+        <div class="post_row">
+          <div class="activety_icon">
+            <div> <img src="./imges/like.png" alt="">45k</div>
+            <div> <img src="./imges/comment.png" alt="">23k</div>
+            <div> <img src="./imges/share.png" alt="">12k</div>
+          </div>
+          <div class="post_profile_icon">
+            <img src="imges/profile_picture.png" alt=""> <i class="fas fa_create_down"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="post_container">
+        <div class="post_row">
+          <div class="user_profile">
+            <img src="./imges/profile_picture.png">
+            <div>
+              <p>Abushe</p>
+              <span>june 24 2024 13:45 pm</span>
+            </div>
+          </div>
+          <a href="#"><img src="./imges/3dot.png" alt=""></a>
+        </div>
+        <p class="post_text">like and share this video whi frainds <span>@Easy Tutorial</span> facebook page on your
+          post
+          ask your doubt in the commennt <a href="#">#easiy tutorial</a>
+          <a href="#">youtube channal</a>
+        </p>
+        <img src="./imges/feed3.png" class="post_image">
+        <div class="post_row">
+          <div class="activety_icon">
+            <div> <img src="./imges/like.png" alt="">45k</div>
+            <div> <img src="./imges/comment.png" alt="">23k</div>
+            <div> <img src="./imges/share.png" alt="">12k</div>
+          </div>
+          <div class="post_profile_icon">
+            <img src="imges/profile_picture.png" alt=""> <i class="fas fa_create_down"></i>
+          </div>
+        </div>
+      </div>
+      <div class="post_container">
+        <div class="post_row">
+          <div class="user_profile">
+            <img src="./imges/profile_picture.png">
+            <div>
+              <p>Abushe</p>
+              <span>june 24 2024 13:45 pm</span>
+            </div>
+          </div>
+          <a href="#"><img src="./imges/3dot.png" alt=""></a>
+        </div>
+        <p class="post_text">Subscribe <span>@Easy Tutorial</span> Youtube channel to watch more video on
+          website development and ui design <a href="#">#easiy tutorial</a>
+          <a href="#">youtube channal</a>
+        </p>
+        <img src="./imges/feed.png" class="post_image">
+        <div class="post_row">
+          <div class="activety_icon">
+            <div> <img src="./imges/like.png" alt="">45k</div>
+            <div> <img src="./imges/comment.png" alt="">23k</div>
+            <div> <img src="./imges/share.png" alt="">12k</div>
+          </div>
+          <div class="post_profile_icon">
+            <img src="imges/profile_picture.png" alt=""> <i class="fas fa_create_down"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="post_container">
+        <div class="post_row">
+          <div class="user_profile">
+            <img src="./imges/profile_picture.png">
+            <div>
+              <p>Abushe</p>
+              <span>june 24 2024 13:45 pm</span>
+            </div>
+          </div>
+          <a href="#"><img src="./imges/3dot.png" alt=""></a>
+        </div>
+        <p class="post_text">like and share this video whi frainds <span>@Easy Tutorial</span> facebook page on your
+          post
+          ask your doubt in the commennt <a href="#">#easiy tutorial</a>
+          <a href="#">youtube channal</a>
+        </p>
+        <img src="./imges/feed1.png" class="post_image">
+        <div class="post_row">
+          <div class="activety_icon">
+            <div> <img src="./imges/like.png" alt="">45k</div>
+            <div> <img src="./imges/comment.png" alt="">23k</div>
+            <div> <img src="./imges/share.png" alt="">12k</div>
+          </div>
+          <div class="post_profile_icon">
+            <img src="imges/profile_picture.png" alt=""> <i class="fas fa_create_down"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="post_container">
+        <div class="post_row">
+          <div class="user_profile">
+            <img src="./imges/profile_picture.png">
+            <div>
+              <p>Abushe</p>
+              <span>june 24 2024 13:45 pm</span>
+            </div>
+          </div>
+          <a href="#"><img src="./imges/3dot.png" alt=""></a>
+        </div>
+        <p class="post_text">like and share this video whi frainds <span>@Easy Tutorial</span> facebook page on your
+          post
+          ask your doubt in the commennt <a href="#">#easiy tutorial</a>
+          <a href="#">youtube channal</a>
+        </p>
+        <img src="./imges/feed3.png" class="post_image">
+        <div class="post_row">
+          <div class="activety_icon">
+            <div> <img src="./imges/like.png" alt="">45k</div>
+            <div> <img src="./imges/comment.png" alt="">23k</div>
+            <div> <img src="./imges/share.png" alt="">12k</div>
+          </div>
+          <div class="post_profile_icon">
+            <img src="imges/profile_picture.png" alt=""> <i class="fas fa_create_down"></i>
+          </div>
+        </div>
+      </div>
+      <div class="post_container">
+        <div class="post_row">
+          <div class="user_profile">
+            <img src="./imges/profile_picture.png">
+            <div>
+              <p>Abushe</p>
+              <span>june 24 2024 13:45 pm</span>
+            </div>
+          </div>
+          <a href="#"><img src="./imges/3dot.png" alt=""></a>
+        </div>
+        <p class="post_text">Subscribe <span>@Easy Tutorial</span> Youtube channel to watch more video on
+          website development and ui design <a href="#">#easiy tutorial</a>
+          <a href="#">youtube channal</a>
+        </p>
+        <img src="./imges/feed.png" class="post_image">
+        <div class="post_row">
+          <div class="activety_icon">
+            <div> <img src="./imges/like.png" alt="">45k</div>
+            <div> <img src="./imges/comment.png" alt="">23k</div>
+            <div> <img src="./imges/share.png" alt="">12k</div>
+          </div>
+          <div class="post_profile_icon">
+            <img src="imges/profile_picture.png" alt=""> <i class="fas fa_create_down"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="post_container">
+        <div class="post_row">
+          <div class="user_profile">
+            <img src="./imges/profile_picture.png">
+            <div>
+              <p>Abushe</p>
+              <span>june 24 2024 13:45 pm</span>
+            </div>
+          </div>
+          <a href="#"><img src="./imges/3dot.png" alt=""></a>
+        </div>
+        <p class="post_text">like and share this video whi frainds <span>@Easy Tutorial</span> facebook page on your
+          post
+          ask your doubt in the commennt <a href="#">#easiy tutorial</a>
+          <a href="#">youtube channal</a>
+        </p>
+        <img src="./imges/feed1.png" class="post_image">
+        <div class="post_row">
+          <div class="activety_icon">
+            <div> <img src="./imges/like.png" alt="">45k</div>
+            <div> <img src="./imges/comment.png" alt="">23k</div>
+            <div> <img src="./imges/share.png" alt="">12k</div>
+          </div>
+          <div class="post_profile_icon">
+            <img src="imges/profile_picture.png" alt=""> <i class="fas fa_create_down"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="post_container">
+        <div class="post_row">
+          <div class="user_profile">
+            <img src="./imges/profile_picture.png">
+            <div>
+              <p>Abushe</p>
+              <span>june 24 2024 13:45 pm</span>
+            </div>
+          </div>
+          <a href="#"><img src="./imges/3dot.png" alt=""></a>
+        </div>
+        <p class="post_text">like and share this video whi frainds <span>@Easy Tutorial</span> facebook page on your
+          post
+          ask your doubt in the commennt <a href="#">#easiy tutorial</a>
+          <a href="#">youtube channal</a>
+        </p>
+        <img src="./imges/feed3.png" class="post_image">
+        <div class="post_row">
+          <div class="activety_icon">
+            <div> <img src="./imges/like.png" alt="">45k</div>
+            <div> <img src="./imges/comment.png" alt="">23k</div>
+            <div> <img src="./imges/share.png" alt="">12k</div>
+          </div>
+          <div class="post_profile_icon">
+            <img src="imges/profile_picture.png" alt=""> <i class="fas fa_create_down"></i>
+          </div>
+        </div>
+      </div>
+
       <button type="button" class="load_more_botton">load More</button>
 
     </div>
